# transducers

./: .gitignore  README.md  cabal.project  flake.nix  fourmolu.yaml  typos.toml
transducers-core/: transducers-core.cabal
transducers-core/src/Data/: Transducer.hs
transducers-core/src/Data/Transducer/: Internal.hs
transducers-core/test/: Test.hs
transducers-vector/: transducers-vector.cabal
transducers-vector/src/Data/Transducer/: Vector.hs
transducers-vector/test/: Test.hs
