cabal-version:      3.0
name:               transducers-vector
version:            1.0.0
author:             Tomasz Maciosowski <t4ccer@gmail.com>
license:            AGPL-3.0-or-later
extra-source-files: README.md

common lang
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    LexicalNegation
    MonadComprehensions
    MultiWayIf
    NegativeLiterals
    NoImplicitPrelude
    NoMonomorphismRestriction
    NoStarIsType
    NumDecimals
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PatternSynonyms
    QualifiedDo
    QuantifiedConstraints
    RankNTypes
    RecursiveDo
    RoleAnnotations
    TypeFamilies
    TypeFamilyDependencies
    UnliftedFFITypes
    UnliftedNewtypes
    ViewPatterns

  build-depends:      base >=4.9 && <5
  ghc-options:
    -Weverything -Werror -Wno-unused-do-bind -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-monomorphism-restriction
    -Wno-missed-specialisations -Wno-all-missed-specializations
    -Wno-unrecognised-pragmas -Wno-operator-whitespace
    -fprint-equality-relations -fprint-explicit-kinds
    -fprint-explicit-foralls

library
  import:          lang
  hs-source-dirs:  src
  build-depends:
    , transducers-core  >=1.0    && <2
    , vector            >=0.12.0 && <0.14

  -- cabal-fmt: expand src
  exposed-modules: Data.Transducer.Vector

test-suite tests
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: test
  build-depends:
    , QuickCheck
    , tasty
    , tasty-quickcheck
    , transducers-core
    , transducers-vector
    , vector
